// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.graphql 1`] = `
# @format

type Foo {
  one: Type
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# @format

type Foo {
  one: Type
}

`;

exports[`without-pragma.graphql 1`] = `
type Foo {
  one: Type
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
type Foo {
  one: Type
}

`;
